<?xml version="1.0" encoding="UTF-8"?>
<!--
  溯知 / TraceQA 微服务父工程（Maven 多模块聚合）。

  技术栈：Spring Boot 4.1 + Spring Cloud 2025.1 + Spring Cloud Alibaba 2025.1(Nacos)
          + Spring Cloud Gateway + OpenFeign + Sa-Token + MyBatis-Plus。
  模块划分：
    - traceqa-common        通用库（统一响应/异常/实体/DTO/VO/RBAC/Feign 契约）
    - traceqa-gateway       网关（Nacos 负载均衡 + Sa-Token 鉴权 + OpenAPI 聚合）
    - traceqa-user-service  用户服务（注册登录、用户与 RBAC 管理）
    - traceqa-file-service  文件服务（MinIO 对象存储）
    - traceqa-kb-service    知识库服务（知识库 + 文档解析入库）
    - traceqa-qa-service    问答服务（对话、RAG 多 Agent 检索、LLM）
    - traceqa-admin-service 管理服务（公告、监控、可观测性代理）
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.1</version>
        <relativePath/>
    </parent>

    <groupId>edu.zjut</groupId>
    <artifactId>traceqa-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>TraceQA</name>
    <description>溯知 / TraceQA 微服务父工程</description>

    <modules>
        <module>traceqa-common</module>
        <module>traceqa-gateway</module>
        <module>traceqa-user-service</module>
        <module>traceqa-file-service</module>
        <module>traceqa-kb-service</module>
        <module>traceqa-qa-service</module>
        <module>traceqa-admin-service</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- 微服务框架版本 -->
        <spring-cloud.version>2025.1.2</spring-cloud.version>
        <spring-cloud-alibaba.version>2025.1.0.0</spring-cloud-alibaba.version>

        <!-- 中间件 / 三方库版本 -->
        <mybatis-plus.version>3.5.17</mybatis-plus.version>
        <sa-token.version>1.46.0</sa-token.version>
        <springdoc.version>3.1.0</springdoc.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <hutool.version>5.8.47</hutool.version>
        <minio.version>9.0.3</minio.version>
        <okhttp.version>4.12.0</okhttp.version>
        <pdfbox.version>3.0.8</pdfbox.version>
        <spring-ai-alibaba.version>2.0.0-M1.1</spring-ai-alibaba.version>
        <spring-ai.version>2.0.1</spring-ai.version>
        <httpcore5.version>5.4.3</httpcore5.version>
        <bcprov.version>1.85.2</bcprov.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring Cloud Alibaba BOM（Nacos 注册/配置中心） -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring Cloud Gateway BOM（版本由 Spring Cloud 2025.1.2 管理） -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-gateway-dependencies</artifactId>
                <version>5.0.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring AI Alibaba Agent BOM -->
            <dependency>
                <groupId>com.alibaba.cloud.ai</groupId>
                <artifactId>spring-ai-alibaba-bom</artifactId>
                <version>${spring-ai-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Netty BOM（对齐 Netty 版本） -->
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-bom</artifactId>
                <version>4.2.17.Final</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents.core5</groupId>
                <artifactId>httpcore5</artifactId>
                <version>${httpcore5.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents.core5</groupId>
                <artifactId>httpcore5-h2</artifactId>
                <version>${httpcore5.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bcprov.version}</version>
            </dependency>
            <dependency>
                <groupId>io.modelcontextprotocol.sdk</groupId>
                <artifactId>mcp-core</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>

            <!-- 内部通用模块 -->
            <dependency>
                <groupId>edu.zjut</groupId>
                <artifactId>traceqa-common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- MyBatis-Plus（Spring Boot 4 Starter） -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-jsqlparser</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>4.1.0</version>
            </dependency>
            <!-- Sa-Token 鉴权 -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <!-- Sa-Token 核心（Dao 接口） -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-core</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <!-- Sa-Token 响应式（网关 WebFlux） -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-reactor-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <!-- Springdoc OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <!-- Hutool -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <!-- MinIO -->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <!-- PDFBox -->
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <!-- Logstash Logback Encoder（JSON 结构化日志） -->
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>8.0</version>
            </dependency>
            <!-- Flyway 数据库迁移 -->
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>11.8.0</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-mysql</artifactId>
                <version>11.8.0</version>
            </dependency>
            <!-- Resilience4j 熔断 -->
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot3</artifactId>
                <version>2.2.0</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-circuitbreaker</artifactId>
                <version>2.2.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>